; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid.c_grid_free_lines.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid.c_grid_free_lines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.grid*, i64, i64)* @grid_free_lines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @grid_free_lines(%struct.grid* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.grid*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.grid* %0, %struct.grid** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  store i64 %8, i64* %7, align 8
  br label %9

9:                                                ; preds = %19, %3
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = add nsw i64 %11, %12
  %14 = icmp slt i64 %10, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %9
  %16 = load %struct.grid*, %struct.grid** %4, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @grid_free_line(%struct.grid* %16, i64 %17)
  br label %19

19:                                               ; preds = %15
  %20 = load i64, i64* %7, align 8
  %21 = add nsw i64 %20, 1
  store i64 %21, i64* %7, align 8
  br label %9

22:                                               ; preds = %9
  ret void
}

declare dso_local i32 @grid_free_line(%struct.grid*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
